--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecency_starting",
+  "name": "decency_starting-point",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,11 +11,15 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.6.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "17.0.20",
+    "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/recoil": "^0.0.9",
+    "@types/styled-components": "^5.1.23",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
