--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-images-uploading": "^3.1.3",
-    "recoil": "^0.6.1"
+    "recoil": "^0.6.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
