--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.8.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11.8.1",
+    "@hiveio/dhive": "^1.2.0",
     "formik": "^2.2.9",
     "framer-motion": "^6",
     "next": "12.1.0",
