--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11.8.1",
     "@hiveio/dhive": "^1.2.0",
+    "@hiveio/hive-js": "^2.0.4",
     "@types/numeral": "^2.0.2",
     "bs58": "^5.0.0",
     "formik": "^2.2.9",
