--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hiveio/dhive": "^1.2.0",
     "@hiveio/hive-js": "^2.0.4",
     "@types/numeral": "^2.0.2",
+    "axios": "^1.4.0",
     "bs58": "^5.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^6",
